Support refinement attachments and named wrapper clones
